--- a/ChatClientServerCompleto/nbproject/project.properties
+++ b/ChatClientServerCompleto/nbproject/project.properties
@@ -1,9 +1,10 @@
-annotation.processing.enabled=true
+annotation.processing.enabled=false
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Chat
+application.vendor=vicen
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,6 +31,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Chat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
@@ -37,7 +39,7 @@ javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=true
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -54,6 +56,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -62,6 +65,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=Chat
 main.class=EchoServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
