--- a/ChatApp_JavaEdition_Server/config.ini
+++ b/ChatApp_JavaEdition_Server/config.ini
@@ -1,3 +1,3 @@
-server name = Default Name Server
+server name = Server del Vice
 port = 5000
-motd = Default Motd Server
+motd = Se hai un problema scrivilo su un bigliettino
