--- a/ChatApp_JavaEdition_Server/nbproject/project.properties
+++ b/ChatApp_JavaEdition_Server/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ChatApp_JavaEdition_Server
-main.class=com.chatapp.server.EchoServer
+main.class=com.chatapp.server.ChatAppServerFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
