--- a/ChatApp_JavaEdition_Client/nbproject/project.properties
+++ b/ChatApp_JavaEdition_Client/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ChatApp_JavaEdition_Client
-main.class=com.chatapp.client.EchoClient
+main.class=com.chatapp.client.ChatAppClientFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
